--- a/spec/cx.lyx
+++ b/spec/cx.lyx
@@ -830,7 +830,7 @@ Broadcast
 \begin_inset space ~
 \end_inset
 
-Layer: A broadcast-capable commucations medium used to carry 
+Layer: A broadcast-capable communications medium used to carry 
 \series bold
 Advertisements
 \series default
@@ -1190,7 +1190,7 @@ literal "false"
 
 \end_inset
 
- certificate identifing a 
+ certificate identifying a 
 \series bold
 Publisher
 \series default
@@ -1444,7 +1444,7 @@ name "subsec:Broadcast-Layer-Requirements"
 
 \begin_layout Standard
 A Broadcast Layer MUST provide the ability for an Advertiser to logically
- broadcast a Contact Identifer (which is a 16-byte RFC
+ broadcast a Contact Identifier (which is a 16-byte RFC
 \begin_inset space ~
 \end_inset
 
@@ -2137,7 +2137,11 @@ noprefix "false"
 \begin_layout Itemize
 The 
 \emph on
-requested_instantiation_security_strength
+requested_
+\lang british
+instantiation
+\lang english
+_security_strength
 \emph default
  SHALL be set to the Security Strength specified for the Generator Type
  in section
@@ -2784,7 +2788,7 @@ A Publisher SHALL use the algorithm defined in this section to construct
 \begin_layout Standard
 An Observer has no need for the algorithm defined in this section, since
  the constructed Seed Value is already present in the Notification and is
- signed by the Pubisher Certificate.
+ signed by the Publisher Certificate.
 \end_layout
 
 \begin_layout Standard
@@ -3394,7 +3398,7 @@ noprefix "false"
 \end_inset
 
 .
- (Note that the Seed Length is specified as a number of bytes.)
+ (Note that the Seed Length is specified as a number of bytes).
 \end_layout
 
 \begin_layout Itemize
@@ -3564,7 +3568,7 @@ name "sec:Seed-Reports"
 A Seed Report is a message constructed by an Advertiser to be sent to a
  Publisher.
  The Seed Report is used to disclose and to verify original authorship of
- a set of Seed Values and to associate the Seed Values with an Alert Level
+ a set of Seed Values, and to associate the Seed Values with an Alert Level
  for inclusion into a Notification.
 \end_layout
 
@@ -6051,7 +6055,7 @@ Z
 
 ) time zone.
  The Publisher SHALL publish a new version of the Publication before this
- time, even if the new verison of the Publication contains no new Notifications.
+ time, even if the new version of the Publication contains no new Notifications.
 \end_layout
 
 \begin_layout Standard
@@ -6321,7 +6325,7 @@ UpdateURL
 \series bold
 UpdateURL 
 \series default
-is a Uniform Resource Locator (URLs) to be used for retrieving new versions
+is a Uniform Resource Locator (URL) to be used for retrieving new versions
  of the Publication, with the first list element being the first preference
  URL.
 \end_layout
@@ -7676,7 +7680,7 @@ A Publisher SHALL fail requests to this endpoint if made through any transport
 \end_layout
 
 \begin_layout Standard
-A Pubisher SHALL report a success status code if and only if the Seed Report
+A Publisher SHALL report a success status code if and only if the Seed Report
  is successfully validated as described in section
 \begin_inset space ~
 \end_inset
@@ -7701,8 +7705,8 @@ An Advertiser SHALL refuse to attempt to retrieve content from this endpoint
 
 \begin_layout Standard
 An Advertiser SHALL provide an indication to the user as to whether or not
- the reponse was successful, and SHOULD provide an opportunity for the user
- to view the HTML error description if the response was not successful.
+ the response was successful, and SHOULD provide an opportunity for the
+ user to view the HTML error description if the response was not successful.
 \end_layout
 
 \begin_layout Subsection
@@ -7950,7 +7954,7 @@ literal "false"
 
 \end_inset
 
- serialisation of an 
+ serialisation of a 
 \begin_inset Flex URL
 status open
 
@@ -8007,7 +8011,7 @@ The
 \series bold
 url
 \series default
- property contains the authoritative absoute URL of the Publsiher Descriptor
+ property contains the authoritative absolute URL of the Publisher Descriptor
  Endpoint as defined in section
 \begin_inset space ~
 \end_inset
