spec: Remove explicit mention of a one-week period for seed history
The specific duration of the period from which seed values are
reported does not need to be mandated by the protocol.  Remove the
explicit mention of "over the past week" to avoid distraction.

Reported-by: Luke Barone-Adesi <luke.barone-adesi@unipart.io>
Signed-off-by: Michael Brown <mbrown@fensystems.co.uk>

--- a/spec/cx.lyx
+++ b/spec/cx.lyx
@@ -531,7 +531,7 @@ The healthcare provider can choose how to communicate the confirmation code
 
 \begin_layout Standard
 The confirmation code allows the device to upload a list of the contact
- identifiers that it has broadcast over the past week.
+ identifiers that it has recently broadcast.
  The list is uploaded to the healthcare provider's servers.
 \end_layout
 
