spec: Emphasise the capability for revocation of earlier alerts
Modelling carried out for NHSX ("Effective Configurations of a Digital
Contact Tracing App: A report to NHSX") suggests that an important
factor in the effectiveness of any contact tracing approach is the
ability to provide fast alerts of self-reported symptoms combined with
the ability to subsequently revoke the alert if a test proves
negative.

This is already supported by the CX protocol, since an alertLevel will
supersede any earlier reported alertLevel and there is already a
defined alertLevel of no-alert(0).  Emphasise this ability within the
cover page bullet points (replacing the point about immediate
deployability, since there is no more space on the cover page).

Signed-off-by: Michael Brown <mbrown@fensystems.co.uk>

--- a/spec/cx.lyx
+++ b/spec/cx.lyx
@@ -301,19 +301,19 @@ ted symptoms and medical test results.
 \begin_layout Itemize
 
 \series bold
-Distributed contact identification
+Revocable diagnoses
 \series default
-: users can identify only their own hazardous contacts, and no central authority
- has access to the information required to identify contacts.
+: a negative medical test result can supersede initial self-reported symptoms,
+ allowing alerted users to minimise unnecessary time spent in isolation.
 \end_layout
 
 \begin_layout Itemize
 
 \series bold
-Immediate deployability
+Distributed contact identification
 \series default
-: the protocol may be implemented as an app on existing Android and iOS
- devices, with no requirement for changes to the core operating system.
+: users can identify only their own hazardous contacts, and no central authority
+ has access to the information required to identify contacts.
 \end_layout
 
 \begin_layout Itemize
